# flobro-app

./: .cz.toml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  biome.json  package-lock.json  package.json
.claude/: settings.local.json
.githooks/: pre-commit
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: greetings.yml  release.yml
src/: blank.html  i18n.js  index.html  main.js  new.html  settings.html  settings.js  sponsors.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  float.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: float_aspect.toml  float_close.toml  float_minimize.toml  float_new.toml  float_pin.toml  float_zoom.toml  open_float.toml  report_error.toml  show_launcher.toml
src-tauri/src/: lib.rs  main.rs  toolbar.js
