[package]
name = "flobro"
version = "1.1.0"
description = "Flobro — floating browser window"
authors = ["Martijn Cornips"]
license = "MIT"
repository = "https://github.com/flobro/flobro-app"
edition = "2021"

[lib]
name = "flobro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
sys-locale = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
